# python-project-lvl1

./: .gitignore  README.md  pyproject.toml
.github/workflows/: github-actions.yml
brain_games/: cli.py  even.py  run_game.py  setup.cfg
brain_games/games/: calc.py  even.py  gcd.py  prime.py  progression.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_gcd.py  brain_progression.py
