[tool.poetry]
authors = ["Alexey Shobanov <shobanov@gmail.com>"]
description = "First project by Python"
license = "MIT"
name = "hexlet-code"
packages = [
  {include = "brain_games"},
]
version = "0.1.1"

[tool.poetry.dependencies]
prompt = "^0.4.1"
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
